crates/rstest-bdd/tests/fixtures_macros/step_struct_pattern.stderr
error: invalid step function signature: unsupported parameter pattern `User { name }`; use a simple identifier (e.g., `arg: T`)

         = help: Bind the parameter to a simple identifier (e.g., `tuple: (i32, i32)` or `user: User`) and destructure it inside the step body.

  --> tests/fixtures_macros/step_struct_pattern.rs:11:26
   |
11 | fn step_with_struct(User { name }: User) {}
   |                          ^^^^^^^^
